--- a/pmo_hub/core/templates/admin/core/definir_situacao_massa.html
+++ b/pmo_hub/core/templates/admin/core/definir_situacao_massa.html
@@ -1,3 +1,4 @@
+<!-- pmo_hub\core\templates\admin\core\definir_situacao_massa.html -->
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls %}
 
