--- a/pmo_hub/core/templates/admin/core/demanda_dashboard.html
+++ b/pmo_hub/core/templates/admin/core/demanda_dashboard.html
@@ -1,3 +1,4 @@
+<!-- pmo_hub\core\templates\admin\core\demanda_dashboard.html -->
 {% extends "admin/base_site.html" %}
 {% load static %}
 {% block title %}Painel de Demandas — Admin{% endblock %}
